--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -7,7 +7,8 @@
     <input id="email" type="email" name="email" placeholder="email" />
     <input id="password" type="password" name="password" placeholder="password" />
     <button id='btn' type="button">Login</button>
-
-    <script src="/js/login.js"></script>
+    <br>
+    <button id="auth" type="button">Token</button>
 </body>
+<script src="/js/login.js"></script>
 </html>
