--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -9,6 +9,7 @@
     <button id='btn' type="button">Login</button>
     <br>
     <button id="auth" type="button">Token</button>
+    <button id="logout" type="button">Logout</button>
 </body>
 <script src="/js/login.js"></script>
 </html>
