NestJs study eighth day

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,9 +4,14 @@
   <title>Login</title>
 </head>
 <body>
+  <div>
     <input id="email" type="email" name="email" placeholder="email" />
+  </div>
+  <div>
     <input id="password" type="password" name="password" placeholder="password" />
-    <button id='btn' type="button">Login</button>    
+  </div>
+  <button id='btn' type="button">Login</button>
+  <button id="create" type="button">회원가입</button>
 </body>
 <script src="/js/login.js"></script>
 </html>
