NestJs study tenth day

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -18,6 +18,9 @@
       <button id="passwordUpdate" type="button" data-member-id="<%= member.id %>">비밀번호 변경</button>
     </div>
     <div>
+      <button id="delete" type="button" data-member-id="<%= member.id %>">회원 탈퇴</button>
+    </div>
+    <div>
       <button id="logout" type="button">Logout</button>
       <button id="all" type="button">All Logout</button>
     </div>
